# irccloud-haskell

./: .gitignore  Main.hs  README.md  default.nix  irccloud-haskell.cabal  shell.nix
