name:                irccloud-haskell
version:             0.1.0.0
synopsis:            Haskell client for IrcCloud
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Georges Dubus
maintainer:          georges.dubus@compiletoi.net
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable irccloud-haskell
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       HsOpenSSL
                     , base >=4.7 && <4.8
                     , bytestring >= 0.10
                     , configurator
                     , io-streams >= 1.2
                     , lens >= 4.7
                     , lens-aeson >= 1.0
                     , network >= 2.6
                     , openssl-streams
                     , text >= 1.2
                     , websockets
                     , wreq
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options:         -threaded
